<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="address">地址：</string>
    <string name="addstake_view">添加投注</string>
    <string name="agree">《法律声明及隐私政策》</string>
    <string name="alert_times_tips">今天已经投注了200次了，感谢您对体育公益事业的支持，同时请理性购买彩票</string>
    <string name="alipay_not_install">您没有安装支付宝</string>
    <string name="all">全部</string>
    <string name="already_newest">当前版本已经是最新版本</string>
    <string name="app_address_tv">后台地址:</string>
    <string name="app_appkey_tv">友盟账号:</string>
    <string name="app_channel_tv">友盟渠道:</string>
    <string name="app_environment_tv">当前环境:</string>
    <string name="app_loc_tv">百度定位:</string>
    <string name="app_model_tv">手机型号:</string>
    <string name="app_name">体彩助手</string>
    <string name="app_os_tv">手机版本:</string>
    <string name="app_push_tv">百度推送:</string>
    <string name="app_title">APP信息</string>
    <string name="app_version_code_tv">版  本  号:</string>
    <string name="app_version_name_tv">版  本  名:</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ave_omit">"平均
遗漏"</string>
    <string name="away_team">客队</string>
    <string name="away_team_vertical">"客
队"</string>
    <string name="back">返回</string>
    <string name="begin_btn_text">开始</string>
    <string name="bet_detail">投注详情</string>
    <string name="bet_detail_tips_content">"出票赔率以店内终端实际出票为准！
出票记录仅供参考，兑奖以纸质彩票为凭证！"</string>
    <string name="bet_detail_tips_title">温馨提示：</string>
    <string name="bet_detail_tips_tv">出票记录仅供参考，兑奖以纸质彩票为凭证</string>
    <string name="bet_detail_title">出票记录</string>
    <string name="bet_detail_tv" formatted="false">本次出票共%d张,总计%d元</string>
    <string name="bet_dlt">投注超级大乐透</string>
    <string name="bet_dlt_hq">后区</string>
    <string name="bet_dlt_hq_dm">后区胆</string>
    <string name="bet_dlt_hq_tm">后区拖</string>
    <string name="bet_dlt_qq">前区</string>
    <string name="bet_dlt_qq_dm">前区胆</string>
    <string name="bet_dlt_qq_tm">前区拖</string>
    <string name="bet_drawid_title_tv">期号</string>
    <string name="bet_drawid_tv" formatted="false">第%s期 共%s期</string>
    <string name="bet_item_lt_title_tv" formatted="false">体彩&lt;%s>%s%s</string>
    <string name="bet_item_title_tv" formatted="false">体彩&lt;%s>%s %s</string>
    <string name="bet_jclq">投注竞彩篮球</string>
    <string name="bet_jczq">投注竞彩足球</string>
    <string name="bet_klpk3_dm">胆码：</string>
    <string name="bet_klpk3_tm">拖码：</string>
    <string name="bet_list_title">投注单记录</string>
    <string name="bet_lottery_dm">胆：</string>
    <string name="bet_lottery_tm">拖：</string>
    <string name="bet_money_tv" formatted="false">%s倍 %s元</string>
    <string name="bet_month_tv">%s月</string>
    <string name="bet_multi_cnt">倍数：</string>
    <string name="bet_order_tv" formatted="false">%s张 %s元</string>
    <string name="bet_prize_title_tv">开奖日期</string>
    <string name="bet_prize_tv">中奖%s元</string>
    <string name="bet_station_title_tv">网点</string>
    <string name="bet_total_title_tv">合计</string>
    <string name="bet_type">投注方式：</string>
    <string name="beyond_max_money_tips">感谢您对体育公益事业的支持,大额购彩风险大,请根据您的情况理性购彩</string>
    <string name="beyond_max_times_tips">今天您已经投注了500次了，小助手已经筋疲力竭了，休息、休息一会儿，明天再扫我吧</string>
    <string name="beyong_max_qrcode_daily_money1">感谢您对体育公益事业的支持，今日您购买金额已超上限（</string>
    <string name="beyong_max_qrcode_daily_money2">元），请理性购彩</string>
    <string name="beyong_max_qrcode_money1">感谢您对体育公益事业的支持，单次购买金额不可超过</string>
    <string name="beyong_max_qrcode_money2">元，请理性购彩</string>
    <string name="beyong_max_title">限额提示</string>
    <string name="bind_btn">绑定</string>
    <string name="bind_fail">绑定失败</string>
    <string name="bind_fillin">仅业主/销售员需填写</string>
    <string name="bind_howto_fillin">如何填写</string>
    <string name="bind_identify">身    份</string>
    <string name="bind_identify_owner">业主</string>
    <string name="bind_identify_seller">销售员</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_success_dialog">"恭喜你绑定完成！
现在您可以到我的-异常票上报"</string>
    <string name="bind_terminal">终端号</string>
    <string name="binding">正在绑定…</string>
    <string name="bsk">竞彩篮球</string>
    <string name="bsk_dxf">大小分</string>
    <string name="bsk_hhgg">混合过关</string>
    <string name="bsk_rfsf">让分胜负</string>
    <string name="bsk_sf">胜负</string>
    <string name="bsk_sfc">胜分差</string>
    <string name="bsk_title">竞彩篮球</string>
    <string name="btn_ticket_history">出票记录</string>
    <string name="business_time">营业时长</string>
    <string name="c115">11选5</string>
    <string name="cancel">取消</string>
    <string name="capture_camera_failed">摄像头不可用</string>
    <string name="capture_decode_failed">找不到条形码</string>
    <string name="channel_brand">渠道品牌：</string>
    <string name="chart">图表</string>
    <string name="check_error">检查更新发生错误,请稍后重试</string>
    <string name="check_network">检查更新发生错误,请检查网络</string>
    <string name="check_new_version">正在检查版本…</string>
    <string name="chit_rule">使用规则:</string>
    <string name="choose_packet">请选择红包</string>
    <string name="clear_log">清除日志</string>
    <string name="client_about_info">终端相关信息</string>
    <string name="client_detail">终端详情</string>
    <string name="client_exception_info">终端异常告警消息</string>
    <string name="client_manager">专管员：</string>
    <string name="client_no">终端号：</string>
    <string name="client_of_my_focus">我关注的终端</string>
    <string name="client_target_analyze_report">终端指标分析报表</string>
    <string name="code_dialog_cancel">扫完了</string>
    <string name="code_dialog_content">获取彩豆成功</string>
    <string name="code_dialog_sure">继续扫</string>
    <string name="code_dialog_title">彩豆</string>
    <string name="code_fail">获取彩豆失败</string>
    <string name="code_title">扫一扫</string>
    <string name="coding">正在获取彩豆…</string>
    <string name="coding_fail">获取扫码结果失败</string>
    <string name="coding_result">正在获取扫码结果</string>
    <string name="contact_info_hint">请留下您的联系方式(选填)</string>
    <string name="contentDescription">图片</string>
    <string name="continue_wrap">继续藏</string>
    <string name="coupon_already">您已经领取过代金券</string>
    <string name="coupon_btn">领取</string>
    <string name="coupon_count">%s</string>
    <string name="coupon_count1">您已发放</string>
    <string name="coupon_count2">张</string>
    <string name="coupon_count3">券</string>
    <string name="coupon_getted">你已经领用过了哦！</string>
    <string name="coupon_left">当前剩余%s张</string>
    <string name="coupon_loc_error">位置获取失败，若要领取优惠券，体彩助手需要知道您的位置，请确保定位功能已打开并且网络良好，以便获取您的位置</string>
    <string name="coupon_money">%s元</string>
    <string name="coupon_own">亲，你已经领用过了哦！开启幸运模式去使用吧！</string>
    <string name="coupon_province_error">此活动仅限%s省用户领取</string>
    <string name="coupon_time_is_not_allow">今天活动未开始</string>
    <string name="coupon_title">代金券</string>
    <string name="coupon_tomorrow">明天再来</string>
    <string name="coupon_tv">您有%s张代金券</string>
    <string name="cur_omit">"当前
遗漏"</string>
    <string name="custom_filter">自定义筛选</string>
    <string name="custom_text_hint">用户自定义行为打开的Activity</string>
    <string name="date">日期</string>
    <string name="date_range">日期范围</string>
    <string name="declaration">点击-开始,即表示您同意</string>
    <string name="developer_message">　　感谢您支持使用‘体彩助手’。在使用过程中如有好的建议或使用问题，请通过意见反馈告知我们。我们将收集您的宝贵意见，并用于帮助产品完善，为您和广大彩民带来更好的应用体验和更加丰富的功能。祝您生活幸福，购彩愉快！</string>
    <string name="developer_name">——研发团队</string>
    <string name="dialog_common_title">提示</string>
    <string name="dlt">超级大乐透</string>
    <string name="dlt_beyong_max_cnt_content">您当前的出票张数为%s张</string>
    <string name="dlt_beyong_max_cnt_titile">出票张数最多为100张</string>
    <string name="dlt_draw_detail">开奖详情</string>
    <string name="dlt_draw_jackpot">奖池金额(元)</string>
    <string name="dlt_draw_leval">奖项</string>
    <string name="dlt_draw_money">每注奖金(元)</string>
    <string name="dlt_draw_nation_sales">全国销量(元)</string>
    <string name="dlt_draw_no_stake">第%s期</string>
    <string name="dlt_draw_sales">本期销量(元)</string>
    <string name="dlt_draw_stake_cnt">中奖注数</string>
    <string name="dlt_draw_tips">每周一、三、六20:30开奖,点击打开&lt;开奖推送></string>
    <string name="ft_bf">比分</string>
    <string name="ft_bqc">半全场</string>
    <string name="ft_hhgg">混合过关</string>
    <string name="ft_rqspf">让球胜平负</string>
    <string name="ft_spf">胜平负</string>
    <string name="ft_zjq">总进球数</string>
    <string name="home_team">主队</string>
    <string name="invitation_hint">请输入业主码(选填)</string>
    <string name="login_message">为方便您及时收到中奖信息的推送,请验证手机</string>
    <string name="lottery_result">彩果</string>
    <string name="money_default">0</string>
    <string name="num_default">0</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="reset_btn">清空</string>
    <string name="round_times">场次</string>
    <string name="stake_btn">选好了</string>
    <string name="stake_money">元</string>
    <string name="stake_num">注</string>
    <string name="sure">确定</string>
    <string name="title_klpk3_pop_bx">"包选
最高奖535元"</string>
    <string name="title_klpk3_pop_cbz">"猜豹子
最高奖6400元"</string>
    <string name="title_klpk3_pop_cdz">"猜对子
最高奖88元"</string>
    <string name="title_klpk3_pop_csz">"猜顺子
最高奖400元"</string>
    <string name="title_klpk3_pop_cth">"猜同花
最高奖90元"</string>
    <string name="title_klpk3_pop_cths">"猜同花顺
最高奖2150元"</string>
    <string name="title_klpk3_pop_rx1">"任选一
奖金5元"</string>
    <string name="title_klpk3_pop_rx2">"任选二
奖金33元"</string>
    <string name="title_klpk3_pop_rx3">"任选三
奖金116元"</string>
    <string name="title_klpk3_pop_rx4">"任选四
奖金46元"</string>
    <string name="title_klpk3_pop_rx5">"任选五
奖金22元"</string>
    <string name="title_klpk3_pop_rx6">"任选六
奖金12元"</string>
    <string name="total_stake">共</string>
    <string name="trend_setting">走势图设置</string>
    <string name="trend_setting_line">折线：</string>
    <string name="trend_setting_line_show">显示折线</string>
    <string name="trend_setting_line_unshow">隐藏折线</string>
    <string name="trend_setting_number">期数：</string>
    <string name="trend_setting_number_100">近100期</string>
    <string name="trend_setting_number_30">近30期</string>
    <string name="trend_setting_number_50">近50期</string>
    <string name="trend_setting_omit">遗漏：</string>
    <string name="trend_setting_omit_show">显示遗漏</string>
    <string name="trend_setting_omit_unshow">隐藏遗漏</string>
    <string name="trend_setting_stat">统计：</string>
    <string name="trend_setting_stat_desc">（走势图底部的出现次数等统计数据）</string>
    <string name="trend_setting_stat_show">显示统计</string>
    <string name="trend_setting_stat_unshow">隐藏统计</string>
    <string name="verification_btn_text">验证</string>
    <string name="verification_hint">请输入短信验证码</string>
</resources>